include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = gnomeradio
DOC_ENTITIES = legal.xml
DOC_INCLUDES = 
DOC_FIGURES = \
figures/freq-controls.png \
figures/misc-controls.png \
figures/presets-box.png \
figures/recording-general.png \
figures/recording-mp3.png \
figures/recording-wav.png \
figures/recording_status.png \
figures/settings-misc.png \
figures/settings-presets.png \
figures/status-window.png \
figures/volume-controls.png

DOC_LINGUAS = es oc sv
