figs = \
	figures/freq-controls.png \
	figures/misc-controls.png \
	figures/presets-box.png \
	figures/recording-general.png \
	figures/recording-mp3.png \
	figures/recording-wav.png \
	figures/recording_status.png \	
	figures/settings-misc.png \
	figures/settings-presets.png \
	figures/status-window.png \
	figures/volume-controls.png
	
figdir = figures
docname = gnomeradio
lang = C
omffile = gnomeradio-C.omf
entities = legal.xml
include $(top_srcdir)/xmldocs.make
dist-hook: app-dist-hook
